--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
+    "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/router": "~12.1.0-",
     "@swimlane/ngx-charts": "^20.0.1",
     "rxjs": "~6.6.0",
