--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,11 @@
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
+    "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~12.1.0-",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
-    "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/router": "~12.1.0-",
     "@swimlane/ngx-charts": "^20.0.1",
     "rxjs": "~6.6.0",
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "~12.1.3",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
+    "@types/d3": "^7.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
